--- a/package.json
+++ b/package.json
@@ -1,79 +1,68 @@
 {
-  "name": "boilerplate-server",
+  "name": "nodejs",
   "version": "1.0.0",
+  "description": "Official repository for the money map backend application",
   "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "joi": "^17.4.2",
-    "pg": "^8.7.1",
-    "reflect-metadata": "^0.1.13",
-    "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.37"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DanielSantos01/money-map-backend.git"
   },
+  "author": "",
   "scripts": {
-    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
-    "start": "yarn build && node dist/server.js",
     "dev": "./node_modules/.bin/ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
-    "prod": "yarn typeorm migration:run && yarn dev",
+    "start": "node src/server.ts",
+    "types": "tsc",
+    "build": "babel src --out-dir lib --copy-files --extensions '.ts,.js'",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "migration": "yarn ts-node ./node_modules/typeorm/cli.js migration:run",
     "generate": "yarn ts-node ./node_modules/typeorm/cli.js migration:generate -n",
     "undo": "yarn ts-node ./node_modules/typeorm/cli.js migration:revert",
     "lint": "eslint ./src --ext .ts",
     "lint:fix": "eslint ./src --ext .ts --fix",
-    "test": "jest",
-    "prepare": "husky install"
+    "test": "jest"
   },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/DanielSantos01/money-map-backend/issues"
+  },
+  "homepage": "https://github.com/DanielSantos01/money-map-backend#readme",
   "devDependencies": {
-    "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.5",
-    "@babel/node": "^7.15.4",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-proposal-decorators": "^7.15.4",
-    "@babel/plugin-proposal-private-methods": "^7.14.5",
-    "@babel/plugin-proposal-private-property-in-object": "^7.15.4",
-    "@babel/preset-env": "^7.15.6",
-    "@babel/preset-typescript": "^7.15.0",
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.13",
+    "@babel/plugin-proposal-decorators": "^7.19.0",
+    "@babel/plugin-transform-runtime": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/register": "^7.18.9",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.4.0",
-    "@types/joi": "^17.2.3",
-    "@types/node": "^16.9.4",
-    "@types/supertest": "^2.0.11",
-    "@types/swagger-ui-express": "^4.1.3",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
-    "babel-jest": "^27.4.6",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^7.31.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-import-helpers": "^1.1.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7.0.0",
-    "jest": "^27.4.7",
-    "lint-staged": ">=10",
-    "supertest": "^6.2.2",
-    "ts-jest": "^27.1.3",
-    "ts-node-dev": "^1.1.8",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.4.3"
+    "@types/node": "^18.7.16",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.36.2",
+    "cors": "^2.8.5",
+    "eslint": "^8.0.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-import-resolver-typescript": "^3.5.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "nodemon": "^2.0.19",
+    "prettier": "^2.7.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.3"
   },
-  "lint-staged": {
-    "*.ts": [
-      "eslint --cache --fix",
-      "yarn test --findRelatedTests"
-    ]
+  "dependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@babel/runtime": "^7.18.9",
+    "bcryptjs": "^2.4.3",
+    "express": "^4.18.1",
+    "jest": "^29.1.1",
+    "joi": "^17.6.0",
+    "pg": "^8.8.0",
+    "supertest": "^6.2.4",
+    "typeorm": "^0.2.37"
   }
 }
